--- a/product.html
+++ b/product.html
@@ -114,14 +114,19 @@
     <section class="main-slider">
     	
         <div class="main-slider-carousel owl-carousel owl-theme">
-            <div class="slide" style="background-image:url(images/main-slider/image-2-2.jpg)">
+            <!-- <div class="slide" style="background-image:url(images/main-slider/image-2-2.jpg)">
 				<div class="auto-container">
                 	<div class="content text-center">
                        	<div class="link-box" style=" margin-top:300px">
 							<a href="#" class="theme-btn btn-style-three"><span class="arrow flaticon-right-arrow-1"></span>我们的产品</a>						</div>
                     </div>
                 </div>
-            </div>
+			</div> -->
+			<div class="slide">
+					<img src="images/main-slider/image-2-2.jpg">
+					<div class="auto-container">
+					</div>
+				</div>
             
         </div>
     </section>
