文件预览，地图效果，第一张图片文字兼容

--- a/product.html
+++ b/product.html
@@ -472,8 +472,8 @@
 									<div class="column col-lg-2 col-md-3 col-sm-6">
 									<h2>产品中心</h2>
 										<ul class="footer-link">
-											<li><a href="product.html?item=1">乘用座椅</a></li>
-											<li><a href="product.html?item=2">商用座椅</a></li>
+											<li><a href="product.html?item=1">乘用车座椅</a></li>
+											<li><a href="product.html?item=2">商用车座椅</a></li>
 											<li><a href="product.html?item=3">骨架</a></li>
 											<li><a href="product.html?item=4">面套</a></li>
 											<li><a href="product.html?item=5">泡沫</a></li>
@@ -525,15 +525,6 @@
 								<h2>重庆延锋安道拓微天下</h2>
 								<div class="widget-content">
 									<div class="text"><img src="images/ewm.jpg"></div>
-									<br>
-									
-									<!--Social Icon One-->
-									<ul class="social-icon-one">
-										<li><a href="#"><span class="icon fa fa-facebook"></span></a></li>
-										<li><a href="#"><span class="icon fa fa-twitter"></span></a></li>
-										<li><a href="#"><span class="icon fa fa-linkedin"></span></a></li>
-										<li><a href="#"><span class="icon fa fa-google-plus"></span></a></li>
-									</ul>
 								</div>
 							</div>
 						</div>
