--- a/profession.html
+++ b/profession.html
@@ -25,6 +25,45 @@
 
 <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
 <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
+<style type="text/css">
+.content-box .text1{
+	font-size: 0.76rem;
+	
+}
+.content-box .text1 span{
+	font-weight: bold;
+    color: #bed533;
+    background: rgba(4,69,87,0.8);
+    padding: 0.2rem 0.8rem;
+}
+.content-box .text2{
+	color: #0a6c80;
+    margin: 0.6rem 0;
+}
+.content-box .text3{
+	font-size: 0.28rem;
+	margin-bottom: 0;
+    color: #333333;
+}
+@media only screen and (max-width: 767px){
+	.content-box .text1{
+		margin-bottom: 0;
+	}
+	.content-box .text1 span{
+		padding: 0.1rem 0.4rem;
+		margin-top: 0.1rem;
+		font-size: 0.36rem;
+	}
+	.content-box .text2{
+		font-size: 0.32rem;
+		margin-top: 0.1rem;
+		margin-bottom: 0.1rem;
+	}
+	.content-box .text3{
+		font-size: 0.24rem;
+	}
+}
+</style>
 </head>
 
 <body>
@@ -128,8 +167,15 @@
 			</div> -->
 			<div class="slide">
 				<img src="images/main-slider/image-4.jpg">
-				<div class="auto-container">
-				</div>
+				<div class="content-box">
+						<div class="content text-right">
+								<h2 class="text1"><span>员工发展</span></h2>
+								<h3 class="text2">打造一个没有天花板的舞台</h3>
+								<div class="text text3">我们期望为人才的成长与发展提供良好的土壤和广阔的平台，在注重企业<br>自身不断发展的同时，我们重视每一位员工以及用于培养他们的资源投入。<br>我们倡导：
+		员工是自己职业发展的主导者，直接主管是员工的教练，人力资源工作者<br>是支持者和内部顾问。
+		让每一个独特的灵魂在没有天花板的成长空间尽情闪耀！</div>
+						</div>
+					</div>
 			</div>
             
         </div>
@@ -208,8 +254,8 @@
 									<div class="column col-lg-2 col-md-3 col-sm-6">
 									<h2>产品中心</h2>
 										<ul class="footer-link">
-											<li><a href="product.html?item=1">乘用座椅</a></li>
-											<li><a href="product.html?item=2">商用座椅</a></li>
+											<li><a href="product.html?item=1">乘用车座椅</a></li>
+											<li><a href="product.html?item=2">商用车座椅</a></li>
 											<li><a href="product.html?item=3">骨架</a></li>
 											<li><a href="product.html?item=4">面套</a></li>
 											<li><a href="product.html?item=5">泡沫</a></li>
@@ -261,15 +307,6 @@
 								<h2>重庆延锋安道拓微天下</h2>
 								<div class="widget-content">
 									<div class="text"><img src="images/ewm.jpg"></div>
-									<br>
-									
-									<!--Social Icon One-->
-									<ul class="social-icon-one">
-										<li><a href="#"><span class="icon fa fa-facebook"></span></a></li>
-										<li><a href="#"><span class="icon fa fa-twitter"></span></a></li>
-										<li><a href="#"><span class="icon fa fa-linkedin"></span></a></li>
-										<li><a href="#"><span class="icon fa fa-google-plus"></span></a></li>
-									</ul>
 								</div>
 							</div>
 						</div>
