--- a/technology.html
+++ b/technology.html
@@ -25,6 +25,26 @@
 
 <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
 <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
+<style type="text/css">
+.content-box .text2{
+	font-size: 0.76rem;
+	margin-top: 0.7rem;
+}
+.content-box .text3{
+	font-size: 0.28rem;
+	margin-bottom: 0;
+}
+@media only screen and (max-width: 767px){
+	.content-box .text2{
+		font-size: 0.36rem;
+		margin-top: 0.1rem;
+		margin-bottom: 0.1rem;
+	}
+	.content-box .text3{
+		font-size: 0.24rem;
+	}
+}
+</style>
 </head>
 
 <body>
@@ -127,7 +147,13 @@
 			</div> -->
 			<div class="slide">
 				<img src="images/main-slider/image-3.jpg">
-				<div class="auto-container">
+				<div class="content-box">
+					<div class="content text-right">
+							<h3 class="text1">创新研发</h3>
+							<h2 class="text2">超级座椅<br><span style="font-weight:bold; color:#bed533">面向未来的座椅</span></h2>
+							<div class="text text3">Superseat是重庆延锋安道拓自主研发的一款多功能高端汽车商务座椅 。
+	<br>我们从用户需求出发 ，还原不同座舱场景 ，满足座舱休闲娱乐 、商务办公等<br>多种需求 ，带你感受智能 、便捷 、舒适的座椅新体验 。</div>
+					</div>
 				</div>
 			</div>
             
@@ -251,8 +277,8 @@
 									<div class="column col-lg-2 col-md-3 col-sm-6">
 									<h2>产品中心</h2>
 										<ul class="footer-link">
-											<li><a href="product.html?item=1">乘用座椅</a></li>
-											<li><a href="product.html?item=2">商用座椅</a></li>
+											<li><a href="product.html?item=1">乘用车座椅</a></li>
+											<li><a href="product.html?item=2">商用车座椅</a></li>
 											<li><a href="product.html?item=3">骨架</a></li>
 											<li><a href="product.html?item=4">面套</a></li>
 											<li><a href="product.html?item=5">泡沫</a></li>
@@ -304,15 +330,6 @@
 								<h2>重庆延锋安道拓微天下</h2>
 								<div class="widget-content">
 									<div class="text"><img src="images/ewm.jpg"></div>
-									<br>
-									
-									<!--Social Icon One-->
-									<ul class="social-icon-one">
-										<li><a href="#"><span class="icon fa fa-facebook"></span></a></li>
-										<li><a href="#"><span class="icon fa fa-twitter"></span></a></li>
-										<li><a href="#"><span class="icon fa fa-linkedin"></span></a></li>
-										<li><a href="#"><span class="icon fa fa-google-plus"></span></a></li>
-									</ul>
 								</div>
 							</div>
 						</div>
