--- a/about.html
+++ b/about.html
@@ -125,8 +125,12 @@
 			</div> -->
 			<div class="slide">
 				<img src="images/main-slider/image-6.jpg">
-                <div class="auto-container">
-                </div>
+                <div class="content-box">
+				<div class="content text-center">
+					<!-- <h3><span>提升机动化世界<font style="color:#bed533">的体验</font></span></h3> -->
+					<h3><span>成为绿色、舒适、智能<br><font style="color:#bed533">生活方式的引领者</font></span></h3>
+					<div class="link-box">&nbsp;</div>
+				</div>
 			</div>
             
         </div>
@@ -381,8 +385,8 @@
 									<div class="column col-lg-2 col-md-3 col-sm-6">
 									<h2>产品中心</h2>
 										<ul class="footer-link">
-											<li><a href="product.html?item=1">乘用座椅</a></li>
-											<li><a href="product.html?item=2">商用座椅</a></li>
+											<li><a href="product.html?item=1">乘用车座椅</a></li>
+											<li><a href="product.html?item=2">商用车座椅</a></li>
 											<li><a href="product.html?item=3">骨架</a></li>
 											<li><a href="product.html?item=4">面套</a></li>
 											<li><a href="product.html?item=5">泡沫</a></li>
@@ -434,15 +438,6 @@
 								<h2>重庆延锋安道拓微天下</h2>
 								<div class="widget-content">
 									<div class="text"><img src="images/ewm.jpg"></div>
-									<br>
-									
-									<!--Social Icon One-->
-									<ul class="social-icon-one">
-										<li><a href="#"><span class="icon fa fa-facebook"></span></a></li>
-										<li><a href="#"><span class="icon fa fa-twitter"></span></a></li>
-										<li><a href="#"><span class="icon fa fa-linkedin"></span></a></li>
-										<li><a href="#"><span class="icon fa fa-google-plus"></span></a></li>
-									</ul>
 								</div>
 							</div>
 						</div>
