--- a/about.html
+++ b/about.html
@@ -367,7 +367,7 @@
 				
 				<!--Image Column-->
 				<div class="col-lg-12 col-md-12 col-sm-12">
-					<div class="image text-center wow bounceInUp">
+					<div class="image text-center wow bounceInDown">
 							<img src="images/main-link.jpg" alt="">
 					</div>
 				</div>
