--- a/about.html
+++ b/about.html
@@ -275,7 +275,7 @@
 					</div>
 					<div class="show-regin"><span>成都</span></div>
 				</div>
-				<div class="region-list colour1 postition-2 online-node" data-type="重庆">
+				<div class="region-list color1 postition-2 online-node" data-type="重庆">
 					<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
 						<span class="pulse delay-05"></span>
 						<span class="pulse delay-04"></span>
@@ -319,6 +319,12 @@
 						<span class="pulse delay-05"></span>
 						<span class="pulse delay-04"></span></div>
 					<div class="show-regin"><span>大庆</span></div>
+				</div>
+				<div class="region-list  active  postition-9 online-node" data-type="湘潭">
+					<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
+						<span class="pulse delay-05"></span>
+						<span class="pulse delay-04"></span></div>
+					<div class="show-regin"><span>湘潭</span></div>
 				</div>
 			</div>
 			<div class="content-box business-box">
