--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 					</div>
 					<div class="show-regin"><span>成都</span></div>
 				</div>
-				<div class="region-list active postition-2 online-node">
+				<div class="region-list color1 active postition-2 online-node">
 					<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
 						<span class="pulse delay-05"></span>
 						<span class="pulse delay-04"></span>
@@ -295,6 +295,12 @@
 						<span class="pulse delay-05"></span>
 						<span class="pulse delay-04"></span></div>
 					<div class="show-regin"><span>大庆</span></div>
+				</div>
+				<div class="region-list  active  postition-9 online-node" data-type="湘潭">
+					<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
+						<span class="pulse delay-05"></span>
+						<span class="pulse delay-04"></span></div>
+					<div class="show-regin"><span>湘潭</span></div>
 				</div>
 			</div>
     	
