--- a/common/footer.html
+++ b/common/footer.html
@@ -52,7 +52,7 @@
 								<div class="column col-lg-2 col-md-6 col-sm-6">
 								<h2>新闻中心</h2>
 									<ul class="footer-link">
-										<li><a href="about.html?item=1">新闻中心</a></li>
+										<li><a href="news.html?item=1">新闻中心</a></li>
 									</ul>
 								</div>
 								<div class="column col-lg-2 col-md-6 col-sm-6">
