--- a/technology.html
+++ b/technology.html
@@ -317,7 +317,8 @@
  	
     <!-- Preloader -->
     <div class="preloader"></div>
- 	
+	 <!--全屏滚动部分-->
+	 <div></div>
 	<div class="swiper-slide">
 		<!--Main Slider-->
 		<section data-item="1" class="main-slider">
