--- a/news-detail.html
+++ b/news-detail.html
@@ -26,6 +26,9 @@
 <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
 <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
 <style type="text/css">
+.page-wrapper{
+    height: auto;
+}
 #pagination{
     text-align: center;
 }
@@ -37,15 +40,32 @@
     flex-direction: column;
     align-items: center;
 }
+.news-header{
+    text-align: center;
+    border-bottom: 1px solid #104e5a;
+    margin: 30px 0 20px;
+    width: 100%;
+}
+.news-title1{
+    color: #104e5a;
+    font-size: 18px;
+    font-weight: 600;
+}
+.news-title2{
+    margin: 5px 0;
+}
 .item-box{
 	position: relative;
 }
 .content-box1{
     text-align: center;
-    margin-bottom: 30px;
 }
 .content-box1 .item-box{
     width: 100%;
+}
+.back-box{
+    text-align: center;
+    margin: 40px;
 }
 </style>
 </head>
@@ -68,17 +88,22 @@
         </div>
     </section>
     <!--End Main Slider-->
-    <!--新闻列表-->
     <section class="news-content">
+        <div class="news-header">
+            <div class="news-title1">直击CAPE2018|不可错过的重庆安道拓“未来方案”</div>
+            <div class="news-title2">
+                <span class="news-author">重庆延锋安道拓微天下</span>
+                <span class="news-time">9月19日</span>
+            </div>
+        </div>
         <div class="content-box1">
-            <div class="item-box"><img src="images/news/detail-1-1.jpg"></div>
             <div class="item-box"><img src="images/news/detail-1-2.jpg"></div>
             <div class="item-box"><img src="images/news/detail-1-3.jpg"></div>
             <div class="item-box"><img src="images/news/detail-1-4.jpg"></div>
             <div class="item-box"><img src="images/news/detail-1-5.jpg"></div>
-            <div class="item-box"><img class="back-btn" src="images/news/detail-1-6.jpg"></div>
         </div>
     </section>
+    <div class="back-box"><img class="back-btn" src="images/news/detail-1-6.jpg"></div>
 	<!--Main Footer-->
 	<div id="footerBox"></div>
 	<!--End Main Footer-->
@@ -105,7 +130,7 @@
 <script src="js/script.js"></script>
 <script type="text/javascript">
     $('.back-btn').click(function(){
-        window.location.href = '../news.html'
+        window.location.href = 'news.html'
     })
 </script>
 
