--- a/news.html
+++ b/news.html
@@ -26,13 +26,19 @@
 <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
 <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
 <style type="text/css">
+.self-color1{
+    color: #2d758c;
+}
+.page-wrapper{
+    height: auto;
+}
 #pagination{
     text-align: center;
 }
 .news-content{
     padding: 0 50px;
     position: relative;
-    margin-top: -40px;
+    margin-top: -20px;
     z-index: 1;
     display: flex;
     flex-direction: column;
@@ -49,6 +55,12 @@
 .content-box1 .item-box{
     width:33.3333333333%;
 }
+.content-box1 .my-column-center{
+    padding: 0 30px;
+}
+.content-box1 .lable-text{
+    margin-bottom: 10px;
+}
 .news-list{
     margin-bottom: 20px;
 }
@@ -64,6 +76,15 @@
 }
 .news-list .item-box .item2{
     flex: 2;
+    background-color: #e4e4e6;
+}
+.cont-text1{
+    margin-left: 25px;
+    padding: 30px 0 15px;
+    border-bottom: 2px solid #c6c6c6;
+}
+.cont-text2{
+    padding: 10px  10px 10px 25px;
 }
 </style>
 </head>
@@ -88,47 +109,75 @@
     <!--End Main Slider-->
     <!--新闻列表-->
     <section class="news-content">
-        <div class="content-box1">
+        <div class="content-box1 my-color1">
             <div class="item-box">
                 <img src="images/news/1-1.jpg">
             </div>
-            <div class="item-box">
-                <img src="images/news/1-2.jpg">
+            <div class="item-box my-bg-color2">
+                <!-- <img src="images/news/1-2.jpg"> -->
+                <div class="my-column-center">
+                    <div class="my-font1 self-color1 lable-text">沃尔沃XC40</div>
+                    <div>沃尔沃首次进军小型SUV细分市场XC40保持一贯低调的北欧设计风格</div>
+                </div>
             </div>
             <div class="item-box">
                 <img src="images/news/1-3.jpg">
             </div>
-            <div class="item-box">
-                <img src="images/news/1-4.jpg">
+            <div class="item-box my-bg-color3">
+                <!-- <img src="images/news/1-4.jpg"> -->
+                <div class="my-column-center">
+                    <div class="my-font1 my-color2 lable-text">蔚来ES8</div>
+                    <div>北京车展人气明星，顶级流量首次发布新车型-6座
+                        ES8采用“2+2+2”顶级流量首次发布新车型顶级流量首次发布新车型</div>
+                </div>
             </div>
             <div class="item-box">
                 <img src="images/news/1-5.jpg">
             </div>
-            <div class="item-box">
-                <img src="images/news/1-6.jpg">
+            <div class="item-box my-bg-color2">
+                <!-- <img src="images/news/1-6.jpg"> -->
+                <div class="my-column-center">
+                    <div class="my-font1 self-color1 lable-text">沃尔沃XC40</div>
+                    <div>沃尔沃首次进军小型SUV细分市场XC40保持一贯低调的北欧设计风格</div>
+                </div>
             </div>
         </div>
         <div class="news-list">
             <div class="item-box">
                 <div class="item1"><img src="images/news/item-1.jpg"></div>
-                <div class="item2"><img src="images/news/item-2.jpg"></div>
+                <div class="item2">
+                    <div class="cont-text1 my-font1 self-color1">沃尔沃XC40</div>
+                    <div class="cont-text2">9月19日，重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证</div>
+                </div>
             </div>
             <div class="item-box">
-                    <div class="item1"><img src="images/news/item-1.jpg"></div>
-                    <div class="item2"><img src="images/news/item-2.jpg"></div>
+                <div class="item1"><img src="images/news/item-1.jpg"></div>
+                <div class="item2">
+                    <div class="cont-text1 my-font1 self-color1">沃尔沃XC40</div>
+                    <div class="cont-text2">9月19日，重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证</div>
                 </div>
-                <div class="item-box">
-                        <div class="item1"><img src="images/news/item-1.jpg"></div>
-                        <div class="item2"><img src="images/news/item-2.jpg"></div>
-                    </div>
-                    <div class="item-box">
-                            <div class="item1"><img src="images/news/item-1.jpg"></div>
-                            <div class="item2"><img src="images/news/item-2.jpg"></div>
-                        </div>
-                        <div class="item-box">
-                                <div class="item1"><img src="images/news/item-1.jpg"></div>
-                                <div class="item2"><img src="images/news/item-2.jpg"></div>
-                            </div>
+            </div>
+            <div class="item-box">
+                <div class="item1"><img src="images/news/item-1.jpg"></div>
+                <div class="item2">
+                    <div class="cont-text1 my-font1 self-color1">沃尔沃XC40</div>
+                    <div class="cont-text2">9月19日，重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证</div>
+                </div>
+            </div>
+            <div class="item-box">
+                <div class="item1"><img src="images/news/item-1.jpg"></div>
+                <div class="item2">
+                    <div class="cont-text1 my-font1 self-color1">沃尔沃XC40</div>
+                    <div class="cont-text2">9月19日，重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证</div>
+                </div>
+            </div>
+            <div class="item-box">
+                <div class="item1"><img src="images/news/item-1.jpg"></div>
+                <div class="item2">
+                    <div class="cont-text1 my-font1 self-color1">沃尔沃XC40</div>
+                    <div class="cont-text2">9月19日，重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证重庆安道拓保证</div>
+                </div>
+            </div>
         </div>
     </section>
     <nav id="pagination" aria-label="Page navigation">
@@ -176,7 +225,7 @@
 <script src="js/script.js"></script>
 <script type="text/javascript">
     $('.news-list .item-box').click(function(){
-        window.location.href = '../news-detail.html';
+        window.location.href = 'news-detail.html';
     })
 </script>
 
