--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 	width: 55%;
 }
 .business-box .counter-column{
-	margin-bottom: 0.4rem;
+	margin-bottom: 1.25rem;
 }
 .business-box .count-text{
 	color: #bed533;
-    font-size: 0.6rem;
+    font-size: 1.875rem;
 }
 .business-box .counter-title{
 	color: #fff;
-    font-size: 0.32rem;
+    font-size: 1rem;
 }
 .business-box .col-lg-2{
 	flex: 0 0 30%;
@@ -66,15 +66,15 @@
 		width: 100%;
 	}
 	.business-box .sec-title h2{
-		font-size: 0.4rem;
+		font-size: 1.25rem;
 	}
 	.business-box .count-text{
 		color: #bed533;
-		font-size: 0.36rem;
+		font-size: 1.125rem;
 	}
 	.business-box .counter-title{
 		color: #fff;
-		font-size: 0.28rem;
+		font-size: 0.875rem;
 	}
 }
 .news-center{
@@ -285,7 +285,7 @@
 										</div>
 										<div class="row clearfix">
 												<div class="column counter-column col-lg-2">
-													<div class="inner wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
+													<div class="ani inner" swiper-animate-effect="fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
 														<div class="count-outer count-box">
 															<span class="count-text" data-speed="6000" data-stop="10" >0</span>
 															<h4 class="counter-title">全国工厂</h4>
@@ -293,7 +293,7 @@
 													</div>
 												</div>
 												<div class="column counter-column col-lg-2">
-													<div class="inner wow fadeInLeft" data-wow-delay="600ms" data-wow-duration="1500ms">
+													<div class="inner animated wow fadeInLeft" data-wow-delay="600ms" data-wow-duration="1500ms">
 														<div class="count-outer count-box">
 															<span class="count-text" data-speed="6000" data-stop="4300" >0+</span>
 															<h4 class="counter-title" >员工人数</h4>
@@ -303,7 +303,7 @@
 												<div class="column counter-column col-lg-2">
 													<div class="inner wow fadeInLeft" data-wow-delay="900ms" data-wow-duration="1500ms">
 														<div class="count-outer count-box">
-															<span class="count-text" data-speed="8000" data-stop="5000000000" >0</span>
+															<span class="count-text" data-speed="8000" data-stop="50" >0</span>
 															<h4 class="counter-title" >2018年销售额</h4>
 														</div>
 													</div>
@@ -356,6 +356,7 @@
 <script src="js/appear.js"></script>
 <script src="js/owl.js"></script>
 <script src="js/wow.js"></script>
+<script src="js/swiper.animate.min.js"></script>
 <script src="js/slick.js"></script>
 <script src="js/jquery-ui.js"></script>
 <!-- Master Slider -->
