--- a/news.html
+++ b/news.html
@@ -35,6 +35,9 @@
 #pagination{
     text-align: center;
 }
+#pagination .pagination{
+    justify-content: center;
+}
 .news-content{
     padding: 0 50px;
     position: relative;
@@ -46,6 +49,9 @@
 }
 .item-box{
 	position: relative;
+}
+.content-box1,.news-list{
+    max-width: 1000px;
 }
 .content-box1{
     display: flex;
