--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
             		<div class="sec-title">
 						<h2 class="wow fadeInUp100"><span class="text-white">发展历程</span></h2>
 					</div>
-					<div class="single-vertical-carousel wow fadeInUp100 animated2">
+					<div class="single-vertical-carousel wow fadeInUp100 ani-time2">
 						<div class="slide">
 							<div class="key-block" style="margin-bottom:0px;">
 								<div class="inner-box box1">
