--- a/technology.html
+++ b/technology.html
@@ -376,28 +376,28 @@
 		<div class="column-box column-2">
 			<div class="item-box wow fadeInLeft">
 				<img src="images/technology/3-1.jpg">
-				<div class="content-box box1 wow fadeInLeft animated2">
+				<div class="content-box box1 wow fadeInLeft ani-time2">
 					<div class="cont1 text-color1">迎宾模块</div>
 					<div class="cont2">当车门打开时，自动旋转45°，调整方便进出的方向</div>
 				</div>
 			</div>
 			<div class="item-box wow fadeInRight">
 				<img src="images/technology/3-2.jpg">
-				<div class="content-box box2 wow fadeInRight animated2">
+				<div class="content-box box2 wow fadeInRight ani-time2">
 					<div class="cont1 text-color2">多方位调节</div>
 					<div class="cont2">多向调节及座椅记忆功能，可实现45°及180°的双角度灵活旋转，在车内快速调节舒适位置。</div>
 				</div>
 			</div>
 			<div class="item-box wow fadeInUp100">
 				<img src="images/technology/3-3.jpg">
-				<div class="content-box box3 wow fadeInUp100 animated2">
+				<div class="content-box box3 wow fadeInUp100 ani-time2">
 					<div class="cont1 text-color2">舒适模块</div>
 					<div class="cont2">搭在按摩、腰托、腿托、按摩、通风，根据身体情况自由调节，打造极致舒适</div>
 				</div>
 			</div>
 			<div class="item-box wow fadeInUp100">
 				<img src="images/technology/3-4.jpg">
-				<div class="content-box box4 wow fadeInUp100 animated2">
+				<div class="content-box box4 wow fadeInUp100 ani-time2">
 					<div class="cont1 text-color1">储物模块</div>
 					<div class="cont2">多项巧妙的储物设计，充满惊喜，为你的娱乐与办公提供更大的支持。</div>
 				</div>
@@ -408,7 +408,7 @@
 			</div>
 			<div class="item-box">
 				<img style="visibility: hidden;" src="images/technology/3-5.jpg">
-				<div class="content-box box6 wow fadeInDown100 animated2">
+				<div class="content-box box6 wow fadeInDown100 ani-time2">
 					<div class="cont1 text-color1">空气净化</div>
 					<div class="cont2 text-color3">靠背安装空气净化器，实时监测车内空气，自动完成空气净化，在车内呼吸新鲜空气。</div>
 					<!-- <div class="cont3 text-color1">
@@ -457,7 +457,7 @@
 		<div class="column-box column-5 wow fadeInLeft">
 			<div class="item-box 11" data-bigImg="5-1-big.png">
 				<img src="images/technology/5-1.jpg">
-				<div class="content-box box1 wow fadeInLeft animated2">
+				<div class="content-box box1 wow fadeInLeft ani-time2">
 					<div class="cont1 text-color4">对标室</div>
 				</div>
 			</div>
@@ -491,8 +491,8 @@
 		<div class="content-box">
 			<div class="conts">
 				<div class="cont1 text-color2 wow fadeInLeft"><span>制造</span>能力</div>
-				<div class="cont2 text-color4 wow fadeInLeft animated2">我们拥有</div>
-				<div class="cont3 text-color2 wow fadeInLeft animated2">从汽车座椅零部件到整椅的各部分的生产制造能力</div>
+				<div class="cont2 text-color4 wow fadeInLeft ani-time2">我们拥有</div>
+				<div class="cont3 text-color2 wow fadeInLeft ani-time2">从汽车座椅零部件到整椅的各部分的生产制造能力</div>
 			</div>
 			<div class="column-box column-4">
 				<div class="item-box wow fadeInLeft">
