--- a/index.html
+++ b/index.html
@@ -89,47 +89,6 @@
 	width: 80px;
 	height: 80px;
 }
-.slide3 .point{
-	position: absolute;
-}
-.slide3 .point>img{
-	width: 30px;
-	height: 30px;
-}
-.slide3 .point1{
-	top: 30%;
-    left: 50%;
-}
-.slide3 .point2{
-	top: 60%;
-    left: 35%;
-}
-.slide3 .point3{
-	top: 30%;
-    left: 80%;
-}
-.slide3 .point4{
-	top: 45%;
-    left: 65%;
-}
-.slide3 .point-text{
-	position: absolute;
-	width: 80px;
-    background: #bed533;
-    border-radius: 8px;
-    height: 30px;
-    line-height: 30px;
-	text-align: center;
-	display: none;
-}
-.slide3 .point1 .point-text,
-.slide3 .point2 .point-text{
-	right: 140%;
-}
-.slide3 .point3 .point-text,
-.slide3 .point4 .point-text{
-	left: 140%;
-}
 
 .slide6 .content{
 	display: flex;
@@ -268,9 +227,9 @@
 				</a>
 			</div>
 			<!--第3屏-->
-			<div class="swiper-slide slide3">
+			<div class="swiper-slide slide3 slide-zy">
 				<img class="slide-bg" src="images/background/bg-2-2.jpg">
-				<div class="my-all-center">
+				<div class="my-all-center content">
 					<img class="zy-img" src="images/index/3.png">
 					<div class="content-box">
 						<div class="point point1">
