关于我们地图样式

--- a/about.html
+++ b/about.html
@@ -70,11 +70,13 @@
 	color: #fff;
 	display: flex;
     flex-direction: column;
-    align-items: center;
+	align-items: center;
+	text-align: center;
+	z-index: 100;
 	display: none;
 }
 .current-info img{
-	width: 300px;
+	width: 350px;
 }
 
 .slide2 .content{
@@ -294,7 +296,7 @@
 			<div id="map" class="swiper-slide slide4">
 				<div class="china-map">
 						<img class="img-map" src="images/background/map_black_bg.png">
-						<div class="region-list active postition-1 online-node" data-type="成都" data-img="images/about/cq-yuzui.jpg">
+						<div class="region-list active postition-1 online-node" data-type="成都大门" data-img="images/about/cd.png">
 							<div class="area-box">
 								<span class="dot"></span>
 								<span class="pulse delay-06"></span>
@@ -303,52 +305,66 @@
 							</div>
 							<div class="show-regin"><span>成都</span></div>
 						</div>
-						<div class="region-list color1 postition-2 online-node" data-type="重庆" data-img="images/about/cq-yuzui.jpg">
+						<div class="region-list color1 postition-2 online-node" data-type="重庆延锋安道拓大门" data-img="images/about/cq-yf.png">
 							<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
 								<span class="pulse delay-05"></span>
 								<span class="pulse delay-04"></span>
 							</div>
 							<div class="show-regin"><span>重庆</span></div>
 						</div>
-						<div class="region-list active postition-3 online-node" data-type="南昌">
+						<div class="region-list color1 postition-2-1 online-node" data-type="重庆江津" data-img="images/about/cq-jj.png">
+							<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
+								<span class="pulse delay-05"></span>
+								<span class="pulse delay-04"></span>
+							</div>
+							<div class="show-regin"></div>
+						</div>
+						<div class="region-list color1 postition-2-2 online-node" data-type="重庆鱼嘴大门" data-img="images/about/cq-yj.png">
+							<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
+								<span class="pulse delay-05"></span>
+								<span class="pulse delay-04"></span>
+							</div>
+							<div class="show-regin"></div>
+						</div>
+						<div class="region-list active postition-3 online-node" data-type="南昌工厂" data-img="images/about/nc.png">
 							<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
 								<span class="pulse delay-05"></span>
 								<span class="pulse delay-04"></span>
 							</div>
 							<div class="show-regin"><span>南昌</span></div>
 						</div>
-						<div class="region-list waite postition-4 waite-node" data-type="东莞">
+						<div class="region-list waite postition-4 waite-node" data-type="东莞大门" data-img="images/about/dg.png">
 							<div class="area-box"><span class="dot"></span>
 								<span class="pulse delay-01"></span>
 								<span class="pulse delay-02"></span>
 								</div>
 							<div class="show-regin"><span>东莞</span></div>
 						</div>
-						<div class="region-list waite postition-5 waite-node" data-type="台州">
+						<div class="region-list waite postition-5 waite-node" data-type="台州工厂" data-img="images/about/tz.png">
 							<div class="area-box"><span class="dot"></span><span class="pulse delay-01"></span>
 								<span class="pulse delay-02"></span>
 								</div>
 							<div class="show-regin"><span>台州</span></div>
 						</div>
-							<div class="region-list active postition-6 online-node" data-type="杭州">
+							<div class="region-list active postition-6 online-node" data-type="杭州大门" data-img="images/about/hz.png">
 							<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
 								<span class="pulse delay-05"></span>
 								<span class="pulse delay-04"></span></div>
 							<div class="show-regin"><span>杭州</span></div>
 						</div>
-						<div class="region-list active postition-7 online-node" data-type="哈尔滨">
+						<div class="region-list active postition-7 online-node" data-type="哈尔滨大门" data-img="images/about/heb.png">
 							<div class="area-box"><span class="dot"></span><span class="pulse delay-04"></span>
 								<span class="pulse delay-05"></span>
 								<span class="pulse delay-03"></span></div>
 							<div class="show-regin"><span>哈尔滨</span></div>
 						</div>
-						<div class="region-list  active  postition-8 online-node" data-type="大庆">
+						<div class="region-list  active  postition-8 online-node" data-type="大庆大门" data-img="images/about/dq.png">
 							<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
 								<span class="pulse delay-05"></span>
 								<span class="pulse delay-04"></span></div>
 							<div class="show-regin"><span>大庆</span></div>
 						</div>
-						<div class="region-list  active  postition-9 online-node" data-type="湘潭">
+						<div class="region-list  active  postition-9 online-node" data-type="湘潭工厂" data-img="images/about/xt.png">
 							<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
 								<span class="pulse delay-05"></span>
 								<span class="pulse delay-04"></span></div>
