--- a/index.html
+++ b/index.html
@@ -286,6 +286,20 @@
 							</div>
 							<div class="show-regin"><span>重庆</span></div>
 						</div>
+						<div class="region-list color1 postition-2-1 online-node" data-type="重庆江津">
+							<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
+								<span class="pulse delay-05"></span>
+								<span class="pulse delay-04"></span>
+							</div>
+							<div class="show-regin"></div>
+						</div>
+						<div class="region-list color1 postition-2-2 online-node" data-type="重庆鱼嘴大门">
+							<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
+								<span class="pulse delay-05"></span>
+								<span class="pulse delay-04"></span>
+							</div>
+							<div class="show-regin"></div>
+						</div>
 						<div class="region-list active postition-3 online-node">
 							<div class="area-box"><span class="dot"></span><span class="pulse delay-06"></span>
 								<span class="pulse delay-05"></span>
