--- a/common/header.html
+++ b/common/header.html
@@ -2,7 +2,7 @@
 <header class="main-header">
 
 	<!--Header-Upper-->
-	<div class="header-upper">
+	<div class="header-upper mobile-header">
 		<div class="outer-container">
 			<div class="clearfix">
 				
@@ -30,9 +30,9 @@
 								<li class="dropdown" data-type="product">
 									<a href="product.html">产品中心</a>
 									<ul class="dropdown-menu">
-										<li><a href="product.html?item=1">乘用车座椅</a></li>
-										<li><a href="product.html?item=2">商用车座椅</a></li>
-										<li><a href="product.html?item=3">骨架</a></li>
+										<li><a href="product.html?item=2">乘用车座椅</a></li>
+										<li><a href="product.html?item=3">商用车座椅</a></li>
+										<li><a href="product.html?item=4">骨架</a></li>
 										<li><a href="product.html?item=4">面套</a></li>
 										<li><a href="product.html?item=5">泡沫</a></li>
 									</ul>
@@ -41,8 +41,8 @@
 									<a href="technology.html">技术能力</a>
 									<ul class="dropdown-menu">
 										<li><a href="technology.html?item=1">创新开发</a></li>
-										<li><a href="technology.html?item=2">技术中心</a></li>
-										<li><a href="technology.html?item=3">制造能力</a></li>
+										<li><a href="technology.html?item=5">技术中心</a></li>
+										<li><a href="technology.html?item=6">制造能力</a></li>
 									</ul>
 								</li>									
 								<li class="dropdown" data-type="profession">
@@ -68,10 +68,10 @@
 								<li class="dropdown" data-type="about">
 									<a href="about.html">关于我们</a>
 									<ul class="dropdown-menu">
-										<li><a href="about.html?item=1">愿景使命</a></li>
-										<li><a href="about.html?item=2">发展历程</a></li>
-										<li><a href="about.html?item=3">全国布局</a></li>
-										<li><a href="about.html?item=4">合作伙伴</a></li>
+										<li><a href="about.html?item=2">愿景使命</a></li>
+										<li><a href="about.html?item=3">发展历程</a></li>
+										<li><a href="about.html?item=4">全国布局</a></li>
+										<li><a href="about.html?item=5">合作伙伴</a></li>
 									</ul>
 								</li>
 							</ul>
@@ -84,7 +84,7 @@
 	<!--End Header Upper-->
 	
 	<!--Sticky Header-->
-	<div class="sticky-header">
+	<div class="sticky-header pc-header">
 		<div class="auto-container clearfix">
 			<!--Logo-->
 			<div class="logo pull-left">
