--- a/product.html
+++ b/product.html
@@ -52,9 +52,12 @@
 	padding: 20px;
 }
 .cont1{
-	font-size: 18px;
+	font-size: 32px;
 	font-weight: 600;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
+}
+.cont2{
+	font-size: 16px;
 }
 .slide2 .content,
 .slide3 .content{
@@ -83,7 +86,7 @@
 			<!--第1屏-->
 			<div class="swiper-slide slide1 slide-zy">
 				<img class="slide-bg" src="images/background/bg-2-2.jpg">
-				<div class="my-all-center content">
+				<div class="content">
 					<img class="zy-img" src="images/index/3.png">
 					<div class="content-box">
 						<div class="point point1">
