--- a/about.html
+++ b/about.html
@@ -134,9 +134,9 @@
 				<img class="slide-bg" src="images/main-slider/image-7.jpg">
 				<div class="content-box">
 					<div class="content text-center">
-						<h3><div class="animated" data-my-animate="fadeInLeft">成为绿色、舒适、智能</div>
+						<h2><div class="animated" data-my-animate="fadeInLeft">成为绿色、舒适、智能</div>
 							<div class="animated ani-time2 my-color2" data-my-animate="fadeInLeft">生活方式的引领者</div>
-						</h3>
+						</h2>
 					</div>
 				</div>
 			</div>
@@ -282,10 +282,19 @@
 												<div class="icon-box"></div>
 												<div class="content">
 													<h3 style="color:#bed533">2017年</h3>
-													<div class="text">...</div>
+													<div class="text">年产量首次突破100万套，实现可持续健康成长，举行《文化的力量》新书发布会，启动全国分子公司新书路演</div>
 												</div>
 											</div>
 										</div>
+										<div class="key-block" style="margin-bottom:0px">
+												<div class="inner-box">
+													<div class="icon-box"></div>
+													<div class="content">
+														<h3 style="color:#bed533">2018年</h3>
+														<div class="text">公司成立15周年，发布企业人物形象“艾小渝”，启动线上文创店“艾小渝的未来工厂”</div>
+													</div>
+												</div>
+											</div>
 									</div>
 								</div>
 							</div>
@@ -388,7 +397,7 @@
 										<div class="inner" data-wow-delay="600ms" data-wow-duration="1500ms">
 											<div class="img-box">
 													<img class="counter-img" src="images/icons/round_02.png">
-													<h5 class="counter-title">10家制造工厂</h5>
+													<h5 class="counter-title">11家制造工厂</h5>
 											</div>
 										</div>
 									</div>
