--- a/common/header.html
+++ b/common/header.html
@@ -50,7 +50,8 @@
 									<ul class="dropdown-menu">
 										<li><a href="profession.html">工作机会</a></li>
 										<li><a href="profession.html">员工发展</a></li>
-										<li><a href="profession.html?item=3">企业招聘</a></li>
+										<li><a href="profession.html">员工关怀</a></li>
+										<li><a href="profession.html?item=3">办公环境</a></li>
 									</ul>
 								</li>
 								<li class="dropdown" data-type="culture">
@@ -64,6 +65,9 @@
 								</li>
 								<li class="dropdown" data-type="news">
 									<a href="news.html">新闻中心</a>
+									<ul class="dropdown-menu">
+										<li><a href="culture.html?item=1">公司资讯</a></li>
+									</ul>
 								</li>
 								<li class="dropdown" data-type="about">
 									<a href="about.html">关于我们</a>
@@ -113,9 +117,9 @@
 								<li class="dropdown" data-type="product">
 									<a href="product.html">产品中心</a>
 									<ul class="dropdown-menu">
-										<li><a href="product.html?item=1">乘用车座椅</a></li>
-										<li><a href="product.html?item=2">商用车座椅</a></li>
-										<li><a href="product.html?item=3">骨架</a></li>
+										<li><a href="product.html?item=2">乘用车座椅</a></li>
+										<li><a href="product.html?item=3">商用车座椅</a></li>
+										<li><a href="product.html?item=4">骨架</a></li>
 										<li><a href="product.html?item=4">面套</a></li>
 										<li><a href="product.html?item=5">泡沫</a></li>
 									</ul>
@@ -124,8 +128,8 @@
 									<a href="technology.html">技术能力</a>
 									<ul class="dropdown-menu">
 										<li><a href="technology.html?item=1">创新开发</a></li>
-										<li><a href="technology.html?item=2">技术中心</a></li>
-										<li><a href="technology.html?item=3">制造能力</a></li>
+										<li><a href="technology.html?item=5">技术中心</a></li>
+										<li><a href="technology.html?item=6">制造能力</a></li>
 									</ul>
 								</li>									
 								<li class="dropdown" data-type="profession">
@@ -133,7 +137,8 @@
 									<ul class="dropdown-menu">
 										<li><a href="profession.html">工作机会</a></li>
 										<li><a href="profession.html">员工发展</a></li>
-										<li><a href="profession.html?item=3">企业招聘</a></li>
+										<li><a href="profession.html">员工关怀</a></li>
+										<li><a href="profession.html?item=3">办公环境</a></li>
 									</ul>
 								</li>
 								<li class="dropdown" data-type="culture">
@@ -147,14 +152,17 @@
 								</li>
 								<li class="dropdown" data-type="news">
 									<a href="news.html">新闻中心</a>
+									<ul class="dropdown-menu">
+										<li><a href="culture.html?item=1">公司资讯</a></li>
+									</ul>
 								</li>
 								<li class="dropdown" data-type="about">
 									<a href="about.html">关于我们</a>
 									<ul class="dropdown-menu">
-										<li><a href="about.html?item=1">愿景使命</a></li>
-										<li><a href="about.html?item=2">发展历程</a></li>
-										<li><a href="about.html?item=3">全国布局</a></li>
-										<li><a href="about.html?item=4">合作伙伴</a></li>
+										<li><a href="about.html?item=2">愿景使命</a></li>
+										<li><a href="about.html?item=3">发展历程</a></li>
+										<li><a href="about.html?item=4">全国布局</a></li>
+										<li><a href="about.html?item=5">合作伙伴</a></li>
 									</ul>
 								</li>
 						</ul>
@@ -165,3 +173,4 @@
 	</div>
 	<!--End Sticky Header-->
 </header>
+<div class="null-header"></div>
