--- a/news-detail.html
+++ b/news-detail.html
@@ -111,7 +111,7 @@
 <!--End pagewrapper-->
 
 <script src="js/jquery.js"></script>
-<script src="js/common.js"></script>
+<script src="my-js/common.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
