--- a/news.html
+++ b/news.html
@@ -69,6 +69,7 @@
 }
 .news-list{
     margin-bottom: 20px;
+    width: 100%;
 }
 .news-list .item-box{
     margin-top: 20px;
@@ -213,7 +214,7 @@
 <!--End pagewrapper-->
 
 <script src="js/jquery.js"></script>
-<script src="js/common.js"></script>
+<script src="my-js/common.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
