--- a/profession.html
+++ b/profession.html
@@ -26,6 +26,9 @@
 <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
 <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
 <style type="text/css">
+.page-wrapper{
+    height: auto;
+}
 .content-box .text1{
 	font-size: 0.76rem;
 	
@@ -188,7 +191,7 @@
 <!--End Master Slider -->
 
 <script src="js/script.js"></script>
-<script src="js/common.js"></script>
+<script src="my-js/common.js"></script>
 
 
 </body>
