--- a/technology.html
+++ b/technology.html
@@ -575,7 +575,7 @@
 </div>
 <!--End pagewrapper-->
 <script src="js/jquery.js"></script>
-<script src="js/common.js"></script>
+<script src="my-js/common.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
